# necpp

src/: CMakeLists.txt  c_geometry.h  math_util.h  nec_context.h  nec_exception.h
